# anki_training

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: develop-checkpoint.ipynb
anki_training/: anki_utils.py  bot.py  config.py  datatypes.py  get_irregular_verbs_words.py  get_verbs_words.py  get_words.py  irregular_verbs_command.py  sein_oder_haben_command.py  translate_command.py
