[project]
name = "anki-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anki~=25.2",
    "beautifulsoup4~=4.13",
    "keyboard~=0.13",
    "rich~=13.6",
    "typer~=0.15",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 100
extend-exclude = []

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "RUF100", "I"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
